# easy-rag

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy.yml
core/: celery.py  settings.py  urls.py  views.py
docs/: FEATURES.md  README.md  TEMP.md  temp.md
docs/temp/: temp.md
frontend/: urls.py  views.py
frontend/templates/pages/: create-account.html  index.html
nginx/: nginx.conf
nginx/conf/: nginx.conf
templates/: base.html
templates/pages/: index.html
templates/socialaccount/: login.html
users/: urls.py  views.py
users/templates/: register.html
users/templates/pages/: create-account.html  home.html
workspace/: forms.py  models.py  urls.py  views.py
workspace/migrations/: 0001_initial.py
